apps/openquartermaster/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openquartermaster
  labels:
    app.kubernetes.io/part-of: openquartermaster
